# Email-Processor-API

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: auth.py  config.py  database.py  logging_config.py  main.py  schemas.py
app/models/: users.py
app/schemas/: app_schemas.py  user_schemas.py
app/services/: email_processor.py
