[project]
name = "email-processor-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi[standard]>=0.116.1",
    "groq>=0.30.0",
    "pillow>=11.3.0",
    "pydantic-settings>=2.10.1",
    "pymupdf>=1.26.3",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.35.0",
]
